bk_ida/gccida/c3/output_658
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_658/src/insn-output.c:4643:9: error: use of undeclared identifier 'arg0'
return &arg0; 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/output_658/src/obj/insn-output.o] Error 1
